# fastmcp-docs

./: CHANGELOG.md  INSTALL.md  LICENSE  PACKAGE_SUMMARY.md  README.md  pyproject.toml  setup.py
examples/: basic_usage.py
fastmcp_docs/: __init__.py  config.py  extractor.py  routes.py  templates.py
